Fixed transmittance program. It now runs.
More importantly, I reimplemented the basic optical depth calculations for my atmospheres.
I'm using shared pointers (soon to be unique_ptrs) to store the gases in each layer. I had
to use clone() in several places to avoid splicing. Still, I need to verify that my absorption
calculations work, and probably to convert wvnums to frequencies (as I don't use wavenumbers,
really). Also, O2 absorption depends on water vapor absorption. I need to think of how to fix
abs_O2 so that it works. Probably with a class member setting function specific to it, but
I have to make sure that it is called during creation.

Atmospheric profile loading reimplemented. Need to test it. I've also started making some basic
test cases in test_atmos.cpp.

TODO:
- Check absorption accuracy
- Ensure profile loads and add ability to read Liu's profiles and autodetect format
- Redo my atmosphere loading code (future). Will be able to read column subheaders to
  work out units. It would be nice to give water in rel. humidity instead of ppmv.
- Reimplement doubling-adding.
- Verify doubling-adding.
- Fix ddscat orientation issue.
- Emission vector calculations.
- Run over freqquency domain and produce plots.

Far future:
- matrixop QR algorithm and zeros
- polynomial zero finding
- reimplement lbl
- other stuff


git-svn-id: file:///mnt/svn/rtmath@311 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-test/rtmath-test.vcxproj.filters
+++ b/rtmath/rtmath-test/rtmath-test.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="..\rtmath\tests\test_config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\rtmath\tests\test_atmos.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
