Tiny makefile fix
git-svn-id: file:///mnt/svn/rtmath@320 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/Makefile
+++ b/rtmath/rtmath-apps/Makefile
@@ -63,5 +63,5 @@ transmittance: $(TM_FILES:.cpp=.o)
 	$(LD) -o bin/rtmath-transmittance $(TM_FILES:.cpp=.o) $(LIBS)
 
 absorb-slab: $(AS_FILES:.cpp=.o)
-	$(LD) -o bin/rtmath-absorb-slab $(AS_files:.cpp=.o) $(LIBS)
+	$(LD) -o bin/rtmath-absorb-slab $(AS_FILES:.cpp=.o) $(LIBS)
 
