Several TODOs fixed: splitstring deprecated and removed. xError todos resolved. one of the errors switched to take a string. matrixop, quadrature, da stuff, etc. using this error all now give a more descriptive message upon throw.
ddweights contains weight-generating functions for my ddscat results. This part of the library works.
The ensemble class uses the weights, and the results for different sigmas are different, but not enough!
Something isn't quite right with the calculation. I'll check it tomorrow. A test module for ddweights was
also created, but it doesn't generate any useful test checks. I'll work on this when I also have a
test set for my ddscat classes. I hope that I'll be able to redo the waterfall plot or some other variation
of it (colors?)

rayleigh files for some reason want to recompile when unchanged. reordered headers so that they at least
now are skipped. vc still wants to compile them, though...?

vs apps targets now build executables with their proper names. combo still needs a major overhaul.

ddparse stripped netcdf stuff. also stripped netcdf from ddscat part of library. it was unused and was
blocking a windows build. will readd and see why libnetcdf was not linked after conference.
ddparse, on account of redo of weighting, now has no theta weights! i have to fix weighting before
I readd the necessary support functions into the library.

added placeholder project rtmath-units for work after the conference. think runtime unit conversion and
formula usage for file loads that is based on boost::units compile-time code.

defs had deprecated erf commented code stripped out.


Tomorrow and Sunday, will work on:
- fixing weighting
- generation of emission vectors
- construction of matrices for quadrature angles
- matrix output in evans-compatible form
- if possible, work on my own da code, but unlikely as much requires rewriting / creation (like daPfFixed
  implementation)
- Do weighting runs to make plot
- Other plots:
  - better polar phase mat

--- a/rtmath/rtmath-test/rtmath-test.vcxproj.filters
+++ b/rtmath/rtmath-test/rtmath-test.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="..\rtmath\tests\test_atmos.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\rtmath\tests\test_ddweights.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
