--- a/rtmath/rtmath-test/rtmath-test.vcxproj
+++ b/rtmath/rtmath-test/rtmath-test.vcxproj
@@ -66,6 +66,7 @@
     <ClCompile Include="..\rtmath\tests\test_atmos.cpp" />
     <ClCompile Include="..\rtmath\tests\test_config.cpp" />
     <ClCompile Include="..\rtmath\tests\test_ddscat.cpp" />
+    <ClCompile Include="..\rtmath\tests\test_ddweights.cpp" />
     <ClCompile Include="..\rtmath\tests\test_debug.cpp" />
     <ClCompile Include="..\rtmath\tests\test_lbl.cpp" />
     <ClCompile Include="..\rtmath\tests\test_matrixop.cpp" />
