Global makefile does not work. Merely committing changes.
git-svn-id: file:///mnt/svn/rtmath@323 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/Makefile
+++ b/rtmath/Makefile
@@ -5,28 +5,16 @@ PD = `pwd`
 all: rtmath test apps
 
 clean:
-	@cd $(PD)
-	@cd rtmath-apps
-	@make clean
-	@cd ../rtmath/
-	@make clean
 
 test: rtmath
-	@cd $(PD)
 	@cd rtmath
-	@make test
-	@cd $(PD)
+	@make -f rtmath/Makefile test
+	@cd ../
 
 apps: rtmath
-	@cd $(PD)
-	@cd rtmath-apps
-	@make all
-	@cd $(PD)
+	@make -f rtmath-apps/Makefile all
 
 rtmath:
-	@cd $(PD)
-	@cd rtmath
-	@make all
-	@cd $(PD)
+	@make -f rtmath/Makefile all
 
 
