--- a/rtmath/rtmath-apps/uuid/uuid.vcxproj.filters
+++ b/rtmath/rtmath-apps/uuid/uuid.vcxproj.filters
@@ -15,16 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="combo2.cpp">
+    <ClCompile Include="uuid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="combo.old">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="combo-options.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
