--- a/rtmath/rtmath-test/rtmath-test.vcxproj.filters
+++ b/rtmath/rtmath-test/rtmath-test.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="..\rtmath\tests\test_ddweights.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\rtmath\tests\test_damatrix.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
