--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -48,6 +48,6 @@ FORCE:
 
 # Compiles regular code along with test files
 test: dynamic $(OBJSTEST)
-	$(LD) -ggdb -lboost_unit_test_framework $(CCFLAGS) -o bin/rtmath-test $(OBJSTEST) -lrtmath $(LIBS)
+	$(LD) -ggdb -lboost_unit_test_framework $(CCFLAGS) -o bin/rtmath-test $(OBJSTEST) lib/librtmath.a $(LIBS)
 	./bin/rtmath-test --log-level=test_suite --report_level=short
 
