--- a/rtmath/rtmath/.project
+++ b/rtmath/rtmath/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>rtmath</name>
+	<name>rtmath-da2</name>
 	<comment></comment>
 	<projects>
 	</projects>
