fix to rtmath makefile to have test build static lib version, not dynamic
git-svn-id: file:///mnt/svn/rtmath@359 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/Makefile
+++ b/rtmath/rtmath/Makefile
@@ -47,7 +47,7 @@ static: pre-build $(OBJS)
 FORCE:
 
 # Compiles regular code along with test files
-test: dynamic $(OBJSTEST)
+test: static $(OBJSTEST)
 	$(LD) -ggdb -lboost_unit_test_framework $(CCFLAGS) -o bin/rtmath-test $(OBJSTEST) lib/librtmath.a $(LIBS)
 	./bin/rtmath-test --log-level=test_suite --report_level=short
 
